# aether-core

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml  run_demo.py  test_aether_offline.js
aether_core/: __init__.py  _security.py  cli.py  compact.py  crdt.py  gateway.py  mesh.py  storage.py
benchmarks/: results.json  run_benchmarks.py
docs/: README.md  api-javascript.md  api-python.md  concepts.md  deployment.md  getting-started.md  recipes.md  troubleshooting.md
examples/: README.md
examples/react-counter/: App.jsx  README.md  main.jsx
examples/vanilla-counter/: README.md  index.html
npm/: .npmignore  LICENSE  README.md  aether.cjs  aether.d.ts  index.cjs  index.d.ts  index.mjs  ironfighter23-aether-core-0.4.0.tgz  package.json  react.d.ts  react.mjs
tests/: test_auth.py  test_bounded_caches.py  test_in_module_demos.py  test_protocol_conformance.py
web/: aether-react.d.ts  aether-react.js  aether.d.ts  aether.js  index.html
web/demos/: kanban.html  markdown.html
